syntax = "proto3";
package pb;

option go_package = "./pb";

message LoginREQ {
    string username = 1;
    string password = 2;
}

message LoginRSP {
    string error_message = 1;
}

message Login2REQ {
    string username = 1;
    string password = 2;
}

message Login2RSP {
    string error_message = 1;
}
